# supply-chain-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
Experiment_materials/enriched_knowledge_graph/: enriched_kg_20260328_152610_936.csv  enriched_kg_20260331_112231_989.csv  enriched_kg_20260402_121459_548.csv
Experiment_materials/event_time_window_dynamic/: events_548_dynamic.html
Experiment_materials/importance_df/: importance_df_548.csv  importance_df_936.csv  importance_df_989.csv
Experiment_materials/kg_visualization/: refined_triplet_kg_20260328_152610_936.html  refined_triplet_kg_20260331_112231_989.html  (+1 more)
enriched_knowledge_graph/: enriched_kg_17_20260325_121547.csv  new_triplets_df_17_20260325_114938.csv
entity_extraction/: entity_df_20260316_124448.csv  entity_df_20260316_125425.csv  entity_df_20260320_095600.csv
final_notebooks/: 01_feature_engineering.ipynb  02_ml_modeling_movers.ipynb  03_taxonomy_analysis.ipynb  04_causal_graph_feature_importance.ipynb  06_trading_economics_datasets.ipynb  07_Causality_ML_Feature_Engineering.ipynb  08_Causality_ML_Taxonomy.ipynb  14_framework_validation_beyond_one_case_openrouter_audit.ipynb
models/: CatBoost.pickle  LightGBM.pickle  RandomForest.pickle  XGBoost.pickle
validation_outputs/: causal_event_graph_case_summary.csv  draft_validation_paragraph.txt  event_graph_coverage_summary.csv  feature_importance_event_coverage.csv  llm_confirmed_links.csv  llm_confirmed_summary.csv  table_causal_event_validation.tex  table_feature_event_coverage.tex  table_llm_judge_confirmed_summary.tex
(+643 files in other folders)
