[project]
name = "knowledge-graph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "causal-learn>=0.1.4.3",
    "eventregistry>=9.1",
    "graphviz>=0.21",
    "jupyterlab>=4.4.10",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "lingam>=1.11.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "ta>=0.11.0",
    "tensorflow>=2.20.0",
    "tigramite>=5.2.9.4",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "xgboost>=3.1.2",
]
